# TACA

./: DEGs_MHC1_DEG_testing.r  DEGs_Sst_DEGs.r  DEGs_mitochondrial_gene_plot_SST_Neuron[67].R  DEGs_mitochondrial_genes_Braak_stage.R  DataIntegration_step0_preintegration.py  DataIntegration_step1-1_level1_integration.py  DataIntegration_step1-2_level1_evaluation.py  DataIntegration_step2-1_level2_neuron_integration.py  DataIntegration_step2-2_level2_neuron_cluster.py  DataIntegration_step2-3_level2_neuron_annotation.py  DataIntegration_step2-4_level2_immune_integration.py  DataIntegration_step2-5_level2_immune_cluster.py  DataIntegration_step2-6_level2_immune_annotation.py  DataIntegration_step3-1_level3_integration_excitneuron.py  DataIntegration_step3-2_level3_integration_inhibneuron.py  DataIntegration_step3-3_level3_micro_macro_integration.py  DataIntegration_step3-4_level3_micro_macro_cluster.py  DataIntegration_step3-5_level3_micro_macro_annotation.py  SexStudy_AD_diver.r  SexStudy_AD_traj.r  pyproject.toml  readme.md
step1_QC/: CxG_metadata.ipynb  CxG_qc.ipynb  GSE_qc.ipynb
step2_PreIntegration/: preintegration.ipynb
step3_Integration_Evaluation/: evaluation.ipynb  integration_semisupervised.ipynb  integration_unsupervised.ipynb
step4_DEG_NeuronMicroglia/: DEGs_within_group_between_microglia_celltypes.R  glutamate_genes_MHC1_DEGs.R  making_pseudobulk_data.r  plots.R
step6_CellCellCommunication/: CellCellInteraction_CellphoneDBV5.0_anaylsis_allnuclei_filter_Immune_L3.py
utils/: _utils.py  constants.py  utils.py
